Overflow fixed, Added universal font

--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -1,35 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Bowlby+One&family=DM+Serif+Text:ital@0;1&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap');
+
 .about-page {
   background-color: #10221d;
   height: 100vh;
   padding-top: 50px;
 }
-.heading-container {
+.about-heading-container {
   position: relative; /* For text overlay positioning */
   text-align: center; /* Centers the text */
 }
 
-.heading-outline {
-  font-size: 200px; /* Large text for outline */
+.about-heading-outline {
+  font-size: 10rem; /* Large text for outline */
   color: transparent; /* Transparent fill */
   text-transform: uppercase;
   letter-spacing: 5px; /* Space between letters */
   font-weight: bold;
   -webkit-text-stroke: 2px #dceee9; /* Outline color */
-  font-family: fantasy;
+  font-family: 'Bowlby One', sans-serif;
   opacity: 0.1; /* Reduce transparency */
 }
 
-.heading-overlay {
+.about-heading-overlay {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 75px;
+  font-size: 4rem;
   color: #52ac94;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 2px;
-  font-family: fantasy;
+  font-family: 'Bowlby One', sans-serif;
   white-space: nowrap; /* Prevents wrapping */
 }
 
@@ -70,7 +74,7 @@
   line-height: 1.6;
   color: #c9d1d1;
   margin: 0 20px;
-  font-family: fantasy;
+  font-family: "DM Serif Text", serif;
 }
 
 /* Media Queries for Stacked Layout */
@@ -92,12 +96,12 @@
 }
 
 @media (max-width: 480px) {
-  .heading-overlay {
-    font-size: 3rem; /* Reduce heading size for very small screens */
+  .about-heading-overlay {
+    font-size: 2rem; /* Reduce heading size for very small screens */
   }
 
-  .heading-outline {
-    font-size: 7rem;
+  .about-heading-outline {
+    font-size: 5rem;
     -webkit-text-stroke: 1px #dceee9;
   }
 
